--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,11 @@
+*.1	text	diff=manpage
 *.c	text	diff=cpp
 *.h	text	diff=cpp
+*.m4	text	diff=m4
 *.md	text	diff=markdown
 *.pal	text	diff=jasc-palette	eol=crlf
 *.png	binary	diff=png
-*.ps1	text	diff=powershell
 *.sh	text	diff=bash	eol=lf
 .gitattributes	text	filter=sort
+postinst	text	diff=bash	eol=lf
+postrm	text	diff=bash	eol=lf
